--- a/index.html
+++ b/index.html
@@ -1,58 +1,7 @@
-<!--  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>AR with Scroll</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <style>
-      body {
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-      }
-      #ar-container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 50vh; /* AR window takes half the screen */
-        background-color: black;
-        z-index: 10;
-      }
-      #content {
-        margin-top: 50vh; /* Leave space for the AR window */
-        padding: 20px;
-        overflow-y: scroll;
-      }
-    </style>
-  </head>
-  <body>
-    
-    <div id="ar-container">
-      <a-scene embedded arjs>
-        <a-box position="0 0.5 -2" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
-      </a-scene>
-    </div>
-
-    
-    <div id="content">
-      <h1>Welcome to AR with Scroll</h1>
-      <p>
-        This is an interactive webpage where AR and regular content coexist. Scroll to explore!
-      </p>
-      <p>More content...</p>
-      <p>Even more content...</p>
-    </div>
-  </body>
-</html>
- -->
-
-
- <!DOCTYPE html>
-<html>
-  <head>
-    <title>AR Object Placement</title>
+    <title>AR.js Object Placement</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-ar@1.7.2/build/aframe-ar.min.js"></script>
     <style>
@@ -78,14 +27,17 @@
     </style>
   </head>
   <body>
-    <!-- AR Window -->
+    <p style="text-align: center; font-size: 16px; padding: 10px; background-color: #f8d7da; color: #721c24;">
+      Please allow camera access to use the AR functionality.
+    </p>
+    <!-- AR.js Scene -->
     <div id="ar-container">
       <a-scene
         embedded
         arjs="sourceType: webcam; debugUIEnabled: false;"
         cursor="rayOrigin: mouse"
       >
-        <!-- Add a plane for ground detection -->
+        <!-- Ground Plane -->
         <a-plane
           position="0 0 0"
           rotation="-90 0 0"
@@ -96,7 +48,7 @@
           arjs-ground
         ></a-plane>
 
-        <!-- Placeable object -->
+        <!-- Placeable Object -->
         <a-entity
           id="placeable-object"
           geometry="primitive: box"
@@ -106,19 +58,20 @@
           visible="false"
         ></a-entity>
 
-        <!-- Scripts to handle tap-to-place -->
+        <!-- Tap-to-Place Script -->
         <script>
           document.addEventListener("click", (event) => {
-            const intersectedEl = document
-              .querySelector("[arjs-ground]")
-              .components.raycaster.getIntersection(
-                document.querySelector("a-plane")
-              );
+            const groundPlane = document.querySelector("[arjs-ground]");
+            const raycaster = groundPlane.components.raycaster;
 
-            if (intersectedEl) {
+            const intersected = raycaster.getIntersection(
+              document.querySelector("a-plane")
+            );
+
+            if (intersected) {
               const object = document.getElementById("placeable-object");
               object.setAttribute("visible", "true");
-              object.setAttribute("position", intersectedEl.point);
+              object.setAttribute("position", intersected.point);
             }
           });
         </script>
@@ -127,11 +80,8 @@
 
     <!-- Scrollable Content -->
     <div id="content">
-      <h1>AR Object Placement</h1>
-      <p>
-        Tap anywhere on the ground to place the red box. Scroll down for more
-        information!
-      </p>
+      <h1>AR.js Object Placement</h1>
+      <p>Tap anywhere on the ground to place the red box. Scroll down for more information!</p>
       <p>More content...</p>
     </div>
   </body>
