--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a-assets>
           <html-material id="web-content">
             <iframe
-              src="https://example.com"
+              src="https://nexshrimtechnology.com/"
               style="width: 100%; height: 100%; border: none;"
             ></iframe>
           </html-material>
