--- a/index.html
+++ b/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AR.js Virtual Screen</title>
+    <title>AR.js Website Viewer</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-ar@1.7.2/build/aframe-ar.min.js"></script>
     <style>
       body {
         margin: 0;
+        overflow: hidden;
       }
-      #ar-container {
-        width: 100%;
-        height: 100vh;
+      iframe {
+        border: none;
       }
     </style>
   </head>
   <body>
-    <!-- AR.js Scene -->
-    <div id="ar-container">
-      <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- Virtual Screen -->
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+      <!-- Virtual Screen -->
+      <a-entity position="0 1 -2">
         <a-plane
-          position="0 1 -3"
-          rotation="0 0 0"
-          width="2"
+          position="0 0 0"
+          width="1.5"
           height="1"
           color="#FFFFFF"
-          material="shader: html; target: #web-content"
         ></a-plane>
-
-        <!-- HTML Content as Material -->
-        <a-assets>
-          <html-material id="web-content">
-            <iframe
-              src="https://nexshrimtechnology.com/"
-              style="width: 100%; height: 100%; border: none;"
-            ></iframe>
-          </html-material>
-        </a-assets>
-      </a-scene>
-    </div>
+        <!-- Iframe Container -->
+        <a-entity
+          geometry="primitive: plane; height: 1; width: 1.5"
+          material="shader: html; target: #nexshrim-site;"
+          position="0 0 0"
+        ></a-entity>
+      </a-entity>
+      <!-- Website Content -->
+      <a-assets>
+        <html-material id="nexshrim-site">
+          <iframe
+            src="https://nexshrimtechnology.com/"
+            style="width: 100%; height: 100%;"
+          ></iframe>
+        </html-material>
+      </a-assets>
+    </a-scene>
   </body>
 </html>
